Refactor and modernize codebase for clarity and efficiency
This commit applies a wide range of code improvements across the project, including replacing deprecated or verbose collection and stream usages with modern Java idioms (e.g., use of .addAll, .isEmpty, .getFirst, and method references), simplifying null and empty checks, improving string concatenation, and removing redundant code. It also standardizes option handling in command classes, enhances readability, and fixes minor logic issues. These changes improve code maintainability, readability, and performance without altering core functionality.